# AutomatiK

./: .dockerignore  .env  .env.template  .gitignore  Dockerfile  FUTURE.md  LICENSE  Pipfile  README.md  README_es_ES.md  SOON_TO_BE_README.md  docker-compose.yml  epic_mod.py  example_mod.py  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-publish.yml  docker.yml
AutomatiK files/: SToken.txt  bot.py  epic_mod.py  humble_mod.py  updates.py
AutomatiK files/core/: config_manager.py  db_manager.py  game.py  generic_mod.py  lang_manager.py  log_manager.py  module_manager.py  schema.json  update.py  updates.py
AutomatiK files/lang/: en_EN.json  es_ES.json
AutomatiK files/modules/: epic.py  epic_mod.py  humble.py  humble_mod.py  mention.py  mention_mod.py
automatik/: __init__.py  bot.py
automatik/commands/: admin.py  owner.py  public.py
automatik/commands/components/: __init__.py  channel_components.py  language_components.py  (+2 more)
automatik/core/: base_service.py  config.py  database.py  db.py  db_manager.py  errors.py  game.py  lang.py  lang_manager.py  language.py  llm.py  log_manager.py  logging.py  modules.py  services.py
automatik/lang/: en.json  en_EN.json  es.json  es_ES.json
automatik/modules/: epic.py  humble.py  mention.py  steam.py  ubisoft.py
automatik/services/: epic.py  humble.py  mention.py  steam.py  ubisoft.py
automatik/utils/: cli.py  igdb_client.py  log_setup.py  logging.py  update.py
docs/: CHANGELOG.md  README.md  README_es_ES.md  SOON_TO_BE_README.md  module_guide.md
