[tool.poetry]
name = "automatik"
version = "0.1.0"
description = ""
authors = ["Axyss <contact@axyss.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.6.0"
requests = "^2.32.5"
beautifulsoup4 = "^4.13.4"
pyyaml = "^6.0.2"
pymongo = "^4.14.0"
dotenv = "^0.9.9"
curl-cffi = "^0.13.0"
agno = "^1.7.11"
google-genai = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
